@@ -1,0 +1,18 @@
+##
+##  Regina - A Normal Surface Theory Calculator
+##  Makefile Template
+##
+##  Process this file with automake in the top-level directory
+##  to produce Makefile.in.
+##
+
+KDE_OPTIONS=noautodist
+
+INCLUDES = -I$(top_srcdir) @ENGINE_INCLUDES@
+
+check_LIBRARIES = libsubcomplex.a
+
+libsubcomplex_a_SOURCES = nstandardtriangulation.cpp
+
+noinst_HEADERS = testsubcomplex.h
+
